# elite-control

./: .gitignore  package.json
mobile-client/: .gitignore  package.json
mobile-client/src/: App.tsx  ConnectionOverlay.tsx  index.css
mobile-client/src/websocket/: WebsocketContext.tsx  useWebsocket.ts
src/: App.tsx  Editor.tsx  StatusBar.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: fonts.rs  lib.rs  logging.rs  main.rs  mobile_assets.rs  state.rs  ws.rs
src-tauri/src/journal/: bounded_fifo_vec.rs  mod.rs
src-tauri/src/vjoystick/: mock.rs  mod.rs  windows.rs
src-tauri/src/widget/: base.rs  button.rs  label.rs  mod.rs  pane_set.rs  panel.rs
src/editor/: AttributesPanel.tsx  Editor.tsx  Toolbar.tsx  editor.css
src/hooks/: useDevices.tsx  useLogs.tsx  useTauriListen.tsx
src/statusbar/: LogsModal.tsx  LogsOverlay.tsx  QrCodeModal.tsx  QrCodeOverlay.tsx  StatusBar.tsx  statusbar.css  types.ts
src/widgets/: Button.tsx  Label.tsx  widget.ts
src/widgets/serialization/: buttonSerializer.ts
