[package]
name = "elite-control"
version = "0.1.0"
description = "A Tauri App"
authors = ["Tyler Snedigar"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "elite_control_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.47.1", features = ["full"] }
include_dir = "0.7.4"
futures-util = { version = "0.3.31", features = ["sink"] }
axum = { version = "0.8.4", features = ["ws", "macros"] }
mime_guess = "2.0.5"
async-trait = "0.1.89"
local-ip-address = "0.6.5"
font-kit = "0.14.3"

[target.'cfg(target_os = "windows")'.dependencies]
vjoy = "0.6.0"
